# postgresql_kernel

./: CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  test_postgresql_kernel.py
.github/workflows/: python-package.yml  python-publish.yml
postgresql_kernel/: kernel.py
