[metadata]
name = postgresql_kernel
version = 0.0.0
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
platforms = 
	Any
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
tests_require = 
	coverage >= 5.5
	mypy >= 0.800
	autopep8 >= 1.5.6
	pylint >= 2.8.0
	pydocstyle >= 6.0.0
	jupyter_kernel_test >= 0.3
setup_requires = 
	wheel >= 0.36.2
	setuptools >= 47.1.0
install_requires = 
	metakernel >=0.24.0
	psycopg2 >= 2.6
	tabulate >= 0.7.5
	jupyter_client >=4.3.0
	ipykernel >= 6.0.1

[options.packages.find]
include = postgresql_kernel
exclude = tests

[options.package_data]
postgresql_kernel =
	images/*.png

[options.data_files]
share/jupyter/kernels/postgresql = 
	postgresql_kernel/kernel.json
	postgresql_kernel/images/*.png

